# SystemMonitor

./: .gitignore  CMakeLists.txt  README.md  README_tar.md  SystemMonitor.desktop  cmd.sh  init.sh  install.sh  language.sh  make_binary_tar.sh  res.qrc  uninstall.sh
config/: config.json  version.h.in
include/: settings.h  systemmonitorapp.h  win.h
include/monitor/: cpu_mem.h  monitor.h  netspeed.h  sys.h
include/utils/: data.h  json.h  mfile.h  qtdata.h  qtui.h
libs/: ld-linux-x86-64.so.2  libGL.so.1  libGLX.so.0  libGLdispatch.so.0  libX11-xcb.so.1  libX11.so.6  libXau.so.6  libXdmcp.so.6  libXext.so.6  libbrotlicommon.so.1  libbrotlidec.so.1  libbsd.so.0  libbz2.so.1.0  libc.so.6  libcap.so.2  libdbus-1.so.3  libdl.so.2  libexpat.so.1  libfontconfig.so.1  libfreetype.so.6  libgcc_s.so.1  libgcrypt.so.20  libglib-2.0.so.0  libgpg-error.so.0  libgthread-2.0.so.0  liblz4.so.1  liblzma.so.5  libm.so.6  libmd.so.0  libpcre2-8.so.0  libpng16.so.16  libpthread.so.0  libstdc++.so.6  libsystemd.so.0  libxcb-xkb.so.1  libxcb.so.1  libxkbcommon-x11.so.0  libxkbcommon.so.0  libz.so.1  libzstd.so.1
qss/: style.qss
res/language/: SystemMonitor_en_US.qm  SystemMonitor_en_US.ts  SystemMonitor_en_US.ts.bak  SystemMonitor_zh_CN.qm  SystemMonitor_zh_CN.ts  SystemMonitor_zh_CN.ts.bak
script/: git.sh  install.sh  ldd.sh  make_binary_tar.sh  uninstall.sh
src/: main.cpp  settings.cpp  systemmonitorapp.cpp  systemmonitorui.cpp  win.cpp
src/monitor/: cpu_mem.cpp  monitor.cpp  netspeed.cpp  sys.cpp
src/utils/: cxxfile.cpp  data.cpp  json.cpp  mfile.cpp  qtdata.cpp  qtui.cpp
